# MeshTalk

./: .clangd  .gitignore  CMakeLists.txt  Contributing.md  README.md  pull_request_template.md  sdkconfig
core/: CMakeLists.txt  crc16.c  display.c
include/: display.h  ui_screens.h
logic/: CMakeLists.txt
main/: CMakeLists.txt  main.c
main/core/: binary_serial.c  crc16.c  display.c  node_config.c  user_table.c
main/headers/: api.h  app_state.h  binary_serial.h  constants.h  crc16.h  display.h  joystick.h  mesh.h  mesh_init.h  message_handler.h  model_vendor.h  node_config.h  types_common.h  ui_loop.h  ui_screens.h  user_table.h
main/include/: api.h  app_state.h  binary_serial.h  chat_log.h  constants.h  display.h  joystick.h  mesh.h  mesh_init.h  message_handler.h  message_struct.h  node_config.h  types_common.h  ui_loop.h  ui_screens.h  user_table.h  vendor_model.h
main/logic/: api.c  app_state.c  message_handler.c
main/mesh/: mesh.c  mesh_init.c  mesh_setup.c  vendor_model.c
main/ui/: app_state.c  chat_log.c  display.c  joystick.c  ui_loop.c  ui_screens.c
ui/: CMakeLists.txt  ui_screens.c
