idf_component_register(
  SRCS 
    "MeshTalk.c"
    "core/crc16.c"
    "core/binary_serial.c"
    "core/node_config.c"
    "core/user_table.c"
    "logic/api.c"
    "logic/app_state.c"
    "logic/message_handler.c"
    "mesh/mesh.c"
    "mesh/mesh_init.c"
    "mesh/vendor_model.c"
    "ui/chat_log.c"
    "ui/display.c"
    "ui/joystick.c"
    "ui/ui_screens.c"
    "ui/ui_loop.c"
  INCLUDE_DIRS
    "."
    "include"
)
